# JamesORgZ.github.io

./: .gitignore  James  James SRT Studio.spec  README.md  app.py  index.html  pyproject.toml  pythonanywhere_wsgi.py  render.yaml  requirements.txt  run_james_audio_srt_web.py  run_james_srt_studio.py  run_telegram_bot.py  set_telegram_webhook.py
docs/: RENDER_DEPLOY.md  TELEGRAM_BOT.md
docs/superpowers/plans/: 2026-06-22-audio-to-srt-tool.md  2026-06-22-james-audio-srt-web-tool.md
docs/superpowers/specs/: 2026-06-22-audio-to-srt-tool-design.md  2026-06-22-james-audio-srt-web-tool-design.md
src/james_srt_studio/: __init__.py  app.py  constants.py  install_desktop.py  media.py  model_setup.py  pipeline.py  subtitle_formatter.py  text_aligner.py  timecode.py  transcriber.py  tts_generator.py
src/james_web_tool/: admin.py  auth.py  config.py  database.py  generator.py  models.py  telegram_bot.py  tts.py  ui.py
tests/: test_app_smoke.py  test_media.py  test_model_setup.py  test_pipeline.py  test_render_deploy.py  test_subtitle_formatter.py  test_telegram_bot.py  test_text_aligner.py  test_timecode.py  test_transcriber.py  test_tts_generator.py  test_web_admin.py  test_web_auth.py  test_web_config.py  test_web_database.py  test_web_generator.py  test_web_ui_smoke.py  test_web_voices.py
